@startuml class_domain
!theme plain
skinparam classAttributeIconSize 0
skinparam classFontSize 12

title Domain Model — Core Entities

class Team {
    +Id: Guid
    +City: string
    +CreatedAt: DateTime
}

class User {
    +Id: Guid
    +Email: string
    +DisplayName: string
    +PasswordHash: string
    +EmailVerified: bool
    +TeamId: Guid?
    +IsActive: bool
}

class Role {
    +Id: int
    +Name: string  // Admin | CityLead | PrayerLead | EventLead | CommunicationLead
}

class UserRole {
    +UserId: Guid
    +RoleId: int
}

class Contact {
    +Id: Guid
    +TeamId: Guid
    +FirstName: string
    +LastName: string
    +Email: string?
    +Phone: string?
    +City: string?
    +CreatedAt: DateTime
    +UpdatedAt: DateTime
    +CreatedById: Guid
    +UpdatedById: Guid?
    +DeletedAt: DateTime?
    +Version: int
}

class Invitation {
    +Id: Guid
    +Email: string
    +TeamId: Guid
    +RoleNamesCsv: string
    +TokenHash: string
    +CreatedById: Guid
    +ExpiresAt: DateTime
    +AcceptedAt: DateTime?
}

class Partner {
    +Id: Guid
    +TeamId: Guid
    +Name: string
    +Website: string?
    +City: string
    +Stage: PartnerStage
    +Description: string?
    +DeletedAt: DateTime?
    +Version: int
}

enum PartnerStage {
    Lead
    InFunnel
    Confirmed
}

class PartnerStageHistory {
    +Id: Guid
    +PartnerId: Guid
    +FromStage: PartnerStage
    +ToStage: PartnerStage
    +ByUserId: Guid
    +At: DateTime
}

class PartnerContact {
    +PartnerId: Guid
    +ContactId: Guid
}

class Hackathon {
    +Id: Guid
    +TeamId: Guid
    +Title: string
    +StartDate: Date
    +EndDate: Date
    +HostCity: string
    +Stage: FourDStage
}

class HackathonPartner {
    +HackathonId: Guid
    +PartnerId: Guid
}

enum FourDStage {
    Discover
    Design
    Develop
    Deploy
}

class HackathonStageHistory {
    +Id: Guid
    +HackathonId: Guid
    +FromStage: FourDStage
    +ToStage: FourDStage
    +ByUserId: Guid
    +At: DateTime
}

class Product {
    +Id: Guid
    +HackathonId: Guid
    +Name: string
    +Description: string?
    +RepoUrl: string?
    +DemoUrl: string?
}

class ProductMember {
    +ProductId: Guid
    +UserId: Guid?
    +ContactId: Guid?
}

class Note {
    +Id: Guid
    +TargetType: NoteTarget   // Contact | Partner
    +TargetId: Guid
    +AuthorId: Guid
    +Body: string
    +CreatedAt: DateTime
    +UpdatedAt: DateTime?
}

class DashboardLayout {
    +UserId: Guid
    +Json: string  // serialized gridster layout
    +UpdatedAt: DateTime
}

class Notification {
    +Id: Guid
    +UserId: Guid
    +Kind: string
    +EntityType: string
    +EntityId: Guid
    +ActorId: Guid
    +CreatedAt: DateTime
    +ReadAt: DateTime?
}

Team "1" -- "*" User
Team "1" -- "*" Invitation
User "*" -- "*" Role
Team "1" -- "*" Contact
Team "1" -- "*" Partner
Team "1" -- "*" Hackathon
Partner "1" -- "*" PartnerContact
Contact "1" -- "*" PartnerContact
Partner "1" -- "*" PartnerStageHistory
Hackathon "1" -- "*" HackathonPartner
Partner "1" -- "*" HackathonPartner
Hackathon "1" -- "*" Product
Product "1" -- "*" ProductMember
Hackathon "1" -- "*" HackathonStageHistory

@enduml
